--- a/MasterMind/MasterMind.Data/MasterMind.Data.csproj
+++ b/MasterMind/MasterMind.Data/MasterMind.Data.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MasterMind\MasterMind.csproj" />
+  </ItemGroup>
+
 </Project>
