--- a/MasterMind/MasterMind.WebApp/MasterMind.WebApp.csproj
+++ b/MasterMind/MasterMind.WebApp/MasterMind.WebApp.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MasterMind.Data\MasterMind.Data.csproj" />
     <ProjectReference Include="..\MasterMind\MasterMind.csproj" />
   </ItemGroup>
 
