--- a/MasterMind/MasterMind.WebApp/MasterMind.WebApp.csproj
+++ b/MasterMind/MasterMind.WebApp/MasterMind.WebApp.csproj
@@ -24,4 +24,10 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="gamedb.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
